<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add_friends"
        android:title="@string/add_friends_title"
        android:icon="@drawable/ic_plus"
        android:onClick="addFriends"
        app:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/profile"
        android:title="@string/menu_profile"
        android:onClick="editProfile"/>
    <item android:id="@+id/sync"
        android:title="@string/menu_sync"
        android:onClick="syncFromMenu"/>
    <item android:id="@+id/sign_out"
        android:title="@string/menu_sign_out"
        android:onClick="signOff"/>
</menu>
